Add Yjs collaborative editing with shared cursors

--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "firebase": "^12.6.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "y-monaco": "^0.1.6",
+    "y-webrtc": "^10.3.0",
+    "yjs": "^13.6.27"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
